
- Instead of invariably using ``webob.Request`` as the "request
  factory" (e.g. in the ``Router`` class) and ``webob.Response`` and
  the "response factory" (e.g. in ``render_template_to_response``),
  allow both to be overridden via a ZCML utility hook.  See the "Using
  ZCML Hooks" chapter of the documentation for more information.

Implementation Changes
----------------------

- The ``wsgiapp`` decorator now uses ``webob.Request.get_response`` to
  do its work rather than relying on howgrown WSGI code.

0.6.2 (2009-01-13)
==================

Features
--------

- Tests can be run with coverage output if you've got ``nose``
  installed in the interpreter which you use to run tests.  Using an
  interpreter with ``nose`` installed, do ``python setup.py
  nosetests`` within a checkout of the ``repoze.bfg`` package to see
  test coverage output.

- Added a ``post`` argument to the ``repoze.bfg.testing:DummyRequest``
  constructor.
  
- Added ``__len__`` and ``__nonzero__`` to ``repoze.bfg.testing:DummyModel``.

- The ``repoze.bfg.registry.get_options`` callable (now renamed to
  ``repoze.bfg.setings.get_options``) used to return only
  framework-specific keys and values in the dictionary it returned.
  It now returns all the keys and values in the dictionary it is
  passed *plus* any framework-specific settings culled from the
  environment.  As a side effect, all PasteDeploy application-specific
  config file settings are made available as attributes of the
  ``ISettings`` utility from within BFG.

- Renamed the existing BFG paster template to ``bfg_starter``.  Added
  another template (``bfg_zodb``) showing default ZODB setup using
  ``repoze.zodbconn``.

- Add a method named ``assert_`` to the DummyTemplateRenderer.  This
  method accepts keyword arguments.  Each key/value pair in the
  keyword arguments causes an assertion to be made that the renderer
  received this key with a value equal to the asserted value.
